fix: Header causing overflow

--- a/sass/assets/styles/_header.scss
+++ b/sass/assets/styles/_header.scss
@@ -4,7 +4,6 @@ header {
 
   margin: 12px auto;
   
-  width: 100%;
   max-width: 640px;
 
   position: sticky;
